function(add_test name lib)
   add_executable(${name} "${name}.cpp")
   if(${lib} STREQUAL "os")
      set(TEST_LIBRARY os-lib)
   elseif(${lib} STREQUAL "gfx")
      set(TEST_LIBRARY gfx-lib)
   elseif(${lib} STREQUAL "base")
      set(TEST_LIBRARY base-lib)
   else()
      message(FATAL_ERROR "lib don't exist")
   endif()
   target_link_libraries(${name} ${TEST_LIBRARY})
endfunction()

add_test(base_clamp "base")